--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
   <body>
     <main>
       <section class="robotron">
-        <img class="robo" src="img/robotron.png" alt="Robotron" id="robotron" />
+        <section class="botoes">
+          <button class="alterar" alterar onclick="trocaImagem('Azul')" id="azul"></button>
+          <button class="alterar" alterar onclick="trocaImagem('Amarelo')" id="amarelo"></button>
+          <button class="alterar" alterar onclick="trocaImagem('Branco')" id="branco"></button>
+          <button class="alterar" alterar onclick="trocaImagem('Preto')" id="preto"></button>
+          <button class="alterar" alterar onclick="trocaImagem('Rosa')" id="rosa"></button>
+          <button class="alterar" alterar onclick="trocaImagem('Vermelho')" id="vermelho"></button>
+        </section>
+        <img class="robo" src="/img/Robotron 2000 - Azul.png" alt="Robotron" />
         <figcaption class="titulo">ROBOTRON <br />2000</figcaption>
       </section>
 
